FlexDeploy 8.0/fdtlt82/FLEXDEPLOY-12131/objects/Dreamhouse_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>LIFX_Token__c</fullName>
        <label>LIFX Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LIFX_URL__c</fullName>
        <label>LIFX URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Light_Service_URL__c</fullName>
        <label>Light Service URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Push_Server_URL__c</fullName>
        <label>Push Server URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Slack_Opportunity_Webhook_URL__c</fullName>
        <label>Slack Opportunity Webhook URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Slack_Property_Webhook_URL__c</fullName>
        <label>Slack Property Webhook URL</label>
        <type>Url</type>
    </fields>
    <label>Dreamhouse</label>
</CustomObject>